# oxidemu

./: .gitignore  Cargo.toml  README.md
chip8/: Cargo.toml
chip8/src/: chip8.rs
common/: Cargo.toml
common/src/: bus.rs  cpu.rs  emulator.rs  errors.rs  input.rs  lib.rs  memory.rs  message.rs  ram.rs  utils.rs  video.rs  vram.rs
emulation/: Cargo.toml
emulation/src/: lib.rs
emulation/src/chip8/: chip8.rs
emulation/src/common/: bus.rs  component.rs  device.rs  emulator.rs  input.rs  message.rs  mod.rs  ram.rs  utils.rs  vram.rs
emulation/src/cpu/: cpu.rs  cpu6502.rs  mod.rs
emulation/src/emulator/: famicom.rs  mod.rs
src/: chip8_emulator.rs  main.rs
starter/: Cargo.toml
starter/src/: main.rs
tests/: bus_test.rs  memory_test.rs  tests.rs
ui/: Cargo.toml
ui/langs/: en_US.json  ru_RU.json
ui/src/: app.rs  appctx.rs  gui_ctx.rs  lib.rs  main_win.rs  render.rs  ui_error.rs
ui/src/win/: game.rs  main.rs  mod.rs  render.rs
