[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
glium = { version = "0.30", default-features = true }
imgui = "0.8.2"
imgui-winit-support = "0.8.2"
imgui-glium-renderer = "0.8.2"
sdl2 = { version = "0.35.2", features = ["unsafe_textures"] }
json-gettext = "4.0.3"
strum_macros = "0.24.0"

chip8 = { path = "../chip8" }
common = { path = "../common" }