[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
glium = { workspace = true, default-features = true }
imgui = { workspace = true }
imgui-winit-support = { workspace = true }
imgui-glium-renderer = { workspace = true }
sdl2 = { workspace = true, features = ["unsafe_textures"] }
json-gettext = { workspace = true }
strum_macros = { workspace = true }
gilrs = { workspace = true }

chip8 = { path = "../chip8" }
common = { path = "../common" }